tests/snapshots/grouping_action.snap
---
source: tests/grouping/mod.rs
expression: input
---
<math>
  <maction id="action-id">
    <mi>
      x
    </mi>
  </maction>
</math>

