tests/snapshots/grouping_error.snap
---
source: tests/grouping/mod.rs
expression: input
---
<math>
  <merror>
    <mrow>
      <mi>
        x
      </mi>
      <mo>
        +
      </mo>
      <mi>
        y
      </mi>
    </mrow>
  </merror>
</math>

