tests/snapshots/grouping_mmultiscripts.snap
---
source: tests/grouping/mod.rs
expression: output
---
<math><mmultiscripts ><mn >1</mn><mn >2</mn><mn >3</mn><mrow ></mrow><mn >5</mn><mprescripts /><mn >6</mn><mrow ></mrow><mn >8</mn><mn >9</mn></mmultiscripts></math>
