tests/snapshots/grouping_mphantom.snap
---
source: tests/grouping/mod.rs
expression: input
---
<math>
  <mfrac>
    <mrow>
      <mi>
        x
      </mi>
      <mo>
        +
      </mo>
      <mi>
        y
      </mi>
      <mo>
        +
      </mo>
      <mi>
        z
      </mi>
    </mrow>
    <mrow>
      <mi>
        x
      </mi>
      <mphantom>
        <mo form="infix">
          +
        </mo>
        <mi>
          y
        </mi>
      </mphantom>
      <mo>
        +
      </mo>
      <mi>
        z
      </mi>
    </mrow>
  </mfrac>
</math>

