tests/snapshots/grouping_mstyle.snap
---
source: tests/grouping/mod.rs
expression: input
---
<math>
  <mstyle mathcolor="red">
    <msub>
      <mi>
        x
      </mi>
      <mi>
        i
      </mi>
    </msub>
  </mstyle>
</math>

