tests/snapshots/grouping_row.snap
---
source: tests/grouping/mod.rs
expression: output
---
<math ><mrow ><mi >x</mi><mo >+</mo><mn >42</mn></mrow></math>
