tests/snapshots/others_annotation.snap
---
source: tests/others/annotation.rs
expression: out
---
<math ><annotation >This is an annotation</annotation></math>
