tests/snapshots/others_annotation_xml.snap
---
source: tests/others/annotation.rs
expression: input
---
<math>
  <annotation-xml>
    <mi>
      x
    </mi>
    <mo>
      +
    </mo>
    <mi>
      y
    </mi>
  </annotation-xml>
</math>

