tests/snapshots/others_frac.snap
---
source: tests/others/mfrac.rs
expression: out
---
<math ><mfrac ><mi >x</mi><mi >y</mi></mfrac></math>
