tests/snapshots/others_map_in_row.snap
---
source: tests/others/mapping.rs
expression: input
---
<math>
  <mrow>
    <mfrac>
      <mi>
        x
      </mi>
      <mi>
        y
      </mi>
    </mfrac>
  </mrow>
</math>

