tests/snapshots/others_mspace.snap
---
source: tests/others/mspace.rs
expression: input
---
<math>
  <mn>
    1
  </mn>
  <mspace width="1em" style="border-top: 1px solid blue" />
  <mfrac>
    <mrow>
      <mn>
        2
      </mn>
      <mspace depth="1em" style="border-left: 1px solid blue" />
    </mrow>
    <mrow>
      <mn>
        3
      </mn>
      <mspace height="2em" style="border-left: 1px solid blue" />
    </mrow>
  </mfrac>
</math>

